# syphon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon  some_module.sy  test.sy
.github/workflows/: release.yml
crates/ast/: Cargo.toml
crates/bytecode/: Cargo.toml
crates/bytecode/src/: chunk.rs  disassembler.rs  instruction.rs  instructions.rs  lib.rs  value.rs
crates/bytecode/src/compiler/: expr.rs  mod.rs  stmt.rs
crates/core/: Cargo.toml
crates/core/src/: cli.rs  main.rs  repl.rs  runner.rs
crates/errors/: Cargo.toml
crates/gc/: Cargo.toml
crates/lexer/: Cargo.toml
crates/location/: Cargo.toml
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs  stack.rs
docs/: built-ins.md  data-types.md  data_types.md  installation.md  syntax.md  troubleshooting.md
docs/builtins/: ffi.md  fs.md  global.md  http.md  io.md  math.md  os.md  process.md  shell.md  threading.md  time.md  unicode.md
examples/: calculator.sy  cat.sy  checker_board.sy  fizz_buzz.sy  guessing.sy  quine.sy  raylib.sy
interpreter/ast/: Cargo.toml
interpreter/bytecode/: Cargo.toml
interpreter/command/: Cargo.toml
interpreter/errors/: Cargo.toml
interpreter/evaluator/: Cargo.toml
interpreter/lexer/: Cargo.toml
interpreter/parser/: Cargo.toml
interpreter/vm/: Cargo.toml
src/: Cli.zig  Driver.zig  main.zig
src/compiler/: Ast.zig  CodeGen.zig  Lexer.zig  Token.zig  ast.zig
src/gc/: GarbageCollector.zig
src/interpreter/: Interpreter.zig
src/vm/: Atom.zig  Code.zig  GarbageCollector.zig  VirtualMachine.zig  auto_hash_map_recorder.zig  (+1 more)
(+130 files in other folders)
