[package]
name = "syphon_bytecode"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
thin-vec = { workspace = true }
derive_more = { workspace = true }

syphon_ast = { path = "../ast" }
syphon_errors = { path = "../errors" }
syphon_location = { path = "../location" }
syphon_parser = { path = "../parser" }
