[package]
name = "syphon_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "syphon"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustc-hash = { workspace = true }

syphon_bytecode = { path = "../bytecode" }
syphon_errors = { path = "../errors" }
syphon_lexer = { path = "../lexer" }
syphon_parser = { path = "../parser" }
syphon_vm = { path = "../vm" }
