[package]
name = "syphon_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = { workspace = true }
rand = { workspace = true }
thin-vec = { workspace = true }

syphon_ast = { path = "../ast" }
syphon_bytecode = { path = "../bytecode" }
syphon_errors = { path = "../errors" }
syphon_gc = { path = "../gc" }
